# backend/db_models.py
@@ -14,7 +14,9 @@ class Mixtape(SQLModel, table=True):
     public_id: str = Field(unique=True, index=True)
     name: str = Field(max_length=255)
     intro_text: Optional[str] = Field(default=None)
-    cassette_text: Optional[str] = Field(default=None)
+    subtitle1: Optional[str] = Field(default=None, max_length=60)
+    subtitle2: Optional[str] = Field(default=None, max_length=60)
+    subtitle3: Optional[str] = Field(default=None, max_length=60)
     is_public: bool = Field(default=False)
     create_time: datetime = Field(default_factory=datetime.utcnow)
     last_modified_time: datetime = Field(default_factory=datetime.utcnow)
@@ -34,7 +36,9 @@ class MixtapeAudit(SQLModel, table=True):
     public_id: str = Field(index=True)
     name: str = Field(max_length=255)
     intro_text: Optional[str] = Field(default=None)
-    cassette_text: Optional[str] = Field(default=None)
+    subtitle1: Optional[str] = Field(default=None, max_length=60)
+    subtitle2: Optional[str] = Field(default=None, max_length=60)
+    subtitle3: Optional[str] = Field(default=None, max_length=60)
     is_public: bool = Field(default=False)
     create_time: datetime
     last_modified_time: datetime
